# cruxy

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  build_debug.sh
legacy/: function.cppm  function_interface.cppm
src/: main.cpp
src/ir/: emulator.cppm  ir.cppm
src/lexer/: ast_builder.cpp  conditional.cpp  conditional.cppm  expression.cpp  expression.cppm  solver.cpp  solver.cppm  statement.cpp  statement.cppm
src/parser/: lookup.cpp  lookup.cppm  parser.cpp  parser.cppm  syntax.cppm  token.cpp  token.cppm
